fix gap between banner and about

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,10 @@
 .stack {
     position: absolute;
-    top: 99vh;
+    top: 100vh;
     left: 0;
     width: 100vw;
     margin: 0;
     margin-top: 0;
+    background-color: #4682B4;
+    z-index: 1;
 }
